fixed footer spacing

--- a/_sass/SHB_css.scss
+++ b/_sass/SHB_css.scss
@@ -19,6 +19,8 @@ img {
   margin-right: auto;
   margin-left: auto;
   max-width: 800px;
+  padding-left:  20px;
+  padding-right: 20px;
 }
 
 .well-collapse {
